Copy To Selected (also ALT-changing with multiple objects selected) does not work with ID properties (this includes Geometry Nodes modifier UIs) #93983

Closed
opened 2021-12-12 07:11:55 +01:00 by Julio Cargnin Pereira · 12 comments

System Information
Operating system: Linux-5.15.5-76051505-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (newest version of Blender that worked as expected)

Short description of error

Holding ALT to change multiple objects's same attributes of modifiers is a commom practice, but it doesn't work when the attribute is part of a Geometry Nodes Modifier.

Exact steps for others to reproduce the error
alt-hold-not-work-gn.mp4

  1. Duplicated you object with an arbitrary attribute exposed to the Geometry Nodes Modifier.
  2. With both objects selected, hold ALT and change the value of the exposed attribute.

Conclusion:
The expected behavior would be that both objects would get the same values updated but only the active object will.
This works for the other modifiers and in many more areas of Blender. Is it a limitation issue or a lack of consistency (to-do)?

**System Information** Operating system: Linux-5.15.5-76051505-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (newest version of Blender that worked as expected) **Short description of error** Holding ALT to change multiple objects's same attributes of modifiers is a commom practice, but it doesn't work when the attribute is part of a Geometry Nodes Modifier. **Exact steps for others to reproduce the error** [alt-hold-not-work-gn.mp4](https://archive.blender.org/developer/F12732997/alt-hold-not-work-gn.mp4) 1. Duplicated you object with an arbitrary attribute exposed to the Geometry Nodes Modifier. 2. With both objects selected, hold ALT and change the value of the exposed attribute. Conclusion: The expected behavior would be that both objects would get the same values updated but only the active object will. This works for the other modifiers and in many more areas of Blender. Is it a limitation issue or a lack of consistency (to-do)?

Added subscriber: @CosmoMidias

Added subscriber: @CosmoMidias
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-12-13 09:42:24 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check...

Can confirm, will check...
Member

This is because internally geometry nodes modifier's properties are stored as ID properties it seems.
And for these (also e.g. python defined ones like https://docs.blender.org/api/master/bpy.props.html), this seems to fail generally...

This is because internally geometry nodes modifier's properties are stored as ID properties it seems. And for these (also e.g. python defined ones like https://docs.blender.org/api/master/bpy.props.html), this seems to fail generally...
Philipp Oeser changed title from Holding ALT does not change multiple same exposed attibutes in GN Modifier. to Copy To Selected (also ALT-changing with multiple objects selected) does not work with ID properties (this includes Geometry Nodes modifier UIs) 2021-12-13 15:23:32 +01:00
Philipp Oeser changed title from Copy To Selected (also ALT-changing with multiple objects selected) does not work with ID properties (this includes Geometry Nodes modifier UIs) to Holding ALT does not change multiple same exposed attibutes in GN Modifier. 2021-12-13 15:42:58 +01:00
Member

In #93983#1271486, @lichtwerk wrote:
This is because internally geometry nodes modifier's properties are stored as ID properties it seems.
And for these (also e.g. python defined ones like https://docs.blender.org/api/master/bpy.props.html), this seems to fail generally...

Apparently this does seem to work on ID properties [not sure how that went wrong the first time testing... or I am having an extremly bad day in regards to testing...]

> In #93983#1271486, @lichtwerk wrote: > This is because internally geometry nodes modifier's properties are stored as ID properties it seems. > And for these (also e.g. python defined ones like https://docs.blender.org/api/master/bpy.props.html), this seems to fail generally... Apparently this **does** seem to work on ID properties [not sure how that went wrong the first time testing... or I am having an extremly bad day in regards to testing...]
Member

Now this gets embarrassing, will have to backflip again it seems...
It does not work on ID properties.

Now this gets embarrassing, will have to backflip again it seems... It **does not work** on ID properties.
Philipp Oeser changed title from Holding ALT does not change multiple same exposed attibutes in GN Modifier. to Copy To Selected (also ALT-changing with multiple objects selected) does not work with ID properties (this includes Geometry Nodes modifier UIs) 2021-12-13 15:58:52 +01:00

This issue was referenced by 6da23db5e0

This issue was referenced by 6da23db5e0def6909797374a0689afa2b3f8d96f

This issue was referenced by d6902668e3

This issue was referenced by d6902668e366aa349053f7ed3428a05b5955f9a3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @tintwotin

Added subscriber: @tintwotin

@lichtwerk Was this intended to address #90856? If so, it doesn't seem to be solved for IDs in texts objects or text strips?

@lichtwerk Was this intended to address #90856? If so, it doesn't seem to be solved for IDs in texts objects or text strips?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93983
No description provided.